Remove unused variables from github test workflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,10 +16,7 @@ jobs:
       DB_PASSWORD: postgres
       DB_NAME: postgres
       DB_PORT: 5432
-      POLYGON_RPC: ${{ secrets.POLYGON_RPC }}
-      MNEMONIC: ${{ secrets.MNEMONIC }}
-      NETSEPIO_CONTRACT_ADDRESS: ${{ secrets.NETSEPIO_CONTRACT_ADDRESS }}
-      JWT_PRIVATE_KEY: ${{ secrets.JWT_PRIVATE_KEY }}
+      JWT_PRIVATE_KEY: aaaa
       VOTER_EULA: TODO VOTER EULA
       AUTH_EULA: TODO AUTH EULA
 
