--- a/sample.env
+++ b/sample.env
@@ -6,6 +6,10 @@ DB_PASSWORD=revotic
 DB_NAME=mtwallet
 DB_PORT=5432
 PORT=3000
+NETWORK_CHAIN_ID_ETHEREUM=1
+NETWORK_NAME_ETHEREUM=ethereum
+NETWORK_PATH_ETHEREUM=m/44H/60H/0H/0/0
+NETWORK_RPC_URL_ETHEREUM=
 NETWORK_CHAIN_ID_POLYGON=80001
 NETWORK_NAME_POLYGON=polygon
 NETWORK_PATH_POLYGON=m/44H/60H/0H/0/0
