github action: Fix missing env secret

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,6 +23,10 @@ jobs:
       NETWORK_NAME_POLYGON: polygon
       NETWORK_PATH_POLYGON: m/44H/60H/0H/0/0
       NETWORK_RPC_URL_POLYGON: ${{ secrets.NETWORK_RPC_URL_POLYGON }}
+      NETWORK_CHAIN_ID_ETHEREUM: 1
+      NETWORK_NAME_ETHEREUM: ethereum
+      NETWORK_PATH_ETHEREUM: m/44H/60H/0H/0/0
+      NETWORK_RPC_URL_ETHEREUM: ${{ secrets.NETWORK_RPC_URL_ETHEREUM }}
       TOKEN: aa
 
     services:
