github(test): Install latest version

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -43,7 +43,7 @@ jobs:
 
     steps:
       - name: Install gotestsum
-        run: go get -u gotest.tools/gotestsum
+        run: go install gotest.tools/gotestsum@latest
       - uses: actions/checkout@v2
       - name: Build
         run: go build -v ./...
