Introduce is locked middleware, use logo package and use stages

--- a/sample.env
+++ b/sample.env
@@ -9,3 +9,4 @@ ALLOWED_ORIGIN="*"
 NETWORK_RPC_URL_ETHEREUM=https://eth-mainnet.public.blastapi.io
 NETWORK_RPC_URL_POLYGON=https://rpc-mumbai.matic.today
 TOKEN=aa
+APP_ENVIRONMENT=DEV
