not storing the mnemonic in DB anymore

--- a/sample.env
+++ b/sample.env
@@ -1,12 +1,11 @@
 GIN_MODE=debug
-DB_HOST=localhost
-DB_USERNAME=superiad
-DB_PASSWORD=superiad
-DB_NAME=superiad
-DB_PORT=5432
+APP_ENVIRONMENT=DEV
 APP_PORT=3000
+REDIS_HOST=
+REDIS_PORT=
+REDIS_PASSWORD=
+REDIS_DB=Superiad
 ALLOWED_ORIGIN="*"
 NETWORK_RPC_URL_ETHEREUM=https://eth-mainnet.public.blastapi.io
 NETWORK_RPC_URL_POLYGON=https://rpc-mumbai.matic.today
 TOKEN=aa
-APP_ENVIRONMENT=DEV
