added create nft endpoint

--- a/sample.env
+++ b/sample.env
@@ -8,4 +8,6 @@ REDIS_DB=Superiad
 ALLOWED_ORIGIN="*"
 NETWORK_RPC_URL_ETHEREUM=https://eth-mainnet.public.blastapi.io
 NETWORK_RPC_URL_POLYGON=https://rpc-mumbai.matic.today
-TOKEN=aa
+TOKEN=0xE20b193763520Ea981036586599AC0cFB305400F
+OPERATOR_MNEMONIC=
+VIRTUACOINNFT_CONTRACT_ADDRESS=0xf3CF865a944BfA6312797E05a31a4083613D5085
